--- a/genomes/data_managers.yaml
+++ b/genomes/data_managers.yaml
@@ -2,25 +2,56 @@ data_managers:
     - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_fetch_genome_dbkeys_all_fasta/data_manager_fetch_genome_all_fasta_dbkey/0.0.2
       params:
         - 'dbkey_source|dbkey_source_selector': 'new'
-        - 'dbkey_source|dbkey': '{{ item.id }}'
+        - 'dbkey_source|dbkey': '{{ item.genome_id }}'
         - 'dbkey_source|dbkey_name': '{{ item.name }}'
         - 'reference_source|reference_source_selector': 'url'
-        - 'reference_source|user_url': '{{ item.url }}'
+        - 'reference_source|user_url': '{{ item.url_genome }}'
         - 'sequence_name': '{{ item.name }}'
-        - 'sequence_id': '{{ item.id }}'
+        - 'sequence_id': '{{ item.build_id }}'
         - 'sorting|sorting_selector': 'as_is'
       items: "{{ genomes }}"
       data_table_reload:
         - all_fasta
         - __dbkeys__
 
-    - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_bowtie2_index_builder/bowtie2_index_builder_data_manager/2.3.0
+    ## Load the transcriptome (CDS)
+    - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_fetch_genome_dbkeys_all_fasta/data_manager_fetch_genome_all_fasta_dbkey/0.0.2
       params:
-        - 'all_fasta_source': '{{ item.id }}'
+        - 'dbkey_source|dbkey_source_selector': 'existing'
+        - 'dbkey_source|dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.url_transcriptome }}'
         - 'sequence_name': '{{ item.name }}'
-        - 'sequence_id': '{{ item.id }}'
+        - 'sequence_id': '{{ item.build_id }}_transcriptome'
+        - 'sorting|sorting_selector': 'as_is'
       items: "{{ genomes }}"
       data_table_reload:
-        # Bowtie creates indices for Bowtie and TopHat
-        - bowtie2_indexes
-        - tophat2_indexes
+        - all_fasta
+
+
+
+    - id: data_manager_fetch_gff
+      params:
+        - 'file_type': 'full'
+        - 'dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.url_annotation }}'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': '{{ item.build_id }}_annotation_gff'
+      items: "{{ genomes }}"
+      data_table_reload:
+        - all_gff
+
+
+#    - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_bowtie2_index_builder/bowtie2_index_builder_data_manager/2.3.0
+#      params:
+#        - 'all_fasta_source': '{{ item.id }}'
+#        - 'sequence_name': '{{ item.name }}'
+#        - 'sequence_id': '{{ item.id }}'
+#      items: "{{ genomes }}"
+#      data_table_reload:
+#        # Bowtie creates indices for Bowtie and TopHat
+#        - bowtie2_indexes
+#        - tophat2_indexes
+
+
