--- a/genomes/data_managers.yaml
+++ b/genomes/data_managers.yaml
@@ -1,4 +1,5 @@
 data_managers:
+    #Load the genome fasta
     - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_fetch_genome_dbkeys_all_fasta/data_manager_fetch_genome_all_fasta_dbkey/0.0.2
       params:
         - 'dbkey_source|dbkey_source_selector': 'new'
@@ -14,7 +15,7 @@ data_managers:
         - all_fasta
         - __dbkeys__
 
-    ## Load the transcriptome (CDS)
+    ## Load the transcriptome fasta
     - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_fetch_genome_dbkeys_all_fasta/data_manager_fetch_genome_all_fasta_dbkey/0.0.2
       params:
         - 'dbkey_source|dbkey_source_selector': 'existing'
@@ -29,7 +30,7 @@ data_managers:
         - all_fasta
 
 
-
+    ## Load all_tx_all_features
     - id: data_manager_fetch_gff
       params:
         - 'file_type': 'full'
@@ -42,6 +43,21 @@ data_managers:
       data_table_reload:
         - all_gff
 
+
+    ## Load rep_tx_all_features
+    - id: data_manager_fetch_gff
+      params:
+        - 'file_type': 'full'
+        - 'dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.url_annotation }}'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': '{{ item.build_id }}_annotation_gff'
+      items: "{{ genomes }}"
+      data_table_reload:
+        - all_gff
+
+    # Build Salmon index using the transcriptome fasta
     - id: salmon_index_builder
       params:
 	- 'all_fasta_source': '{{ item.build_id }}_transcriptome'
@@ -52,6 +68,7 @@ data_managers:
       data_table_reload:
         - salmon_indexes
 
+    # Build bowtie2 index using the genome fasta
     - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_bowtie2_index_builder/bowtie2_index_builder_data_manager/2.3.0
       params:
         - 'all_fasta_source': '{{ item.build_id }}'
