add star and move gff/tx2gene to genome based

--- a/genomes/data_managers_genome_based.yaml
+++ b/genomes/data_managers_genome_based.yaml
@@ -15,6 +15,45 @@ data_managers:
         - all_fasta
         - __dbkeys__
 
+    
+    ## Load gff_all_tx_all_features
+    - id: data_manager_fetch_gff
+      params:
+        - 'dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.gff_all_tx_all_features }}'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': '{{ item.build_id }}_gff_all_tx_all_features'
+      items: "{{ genomes }}"
+      data_table_reload:
+        - all_gff
+
+
+    ## Load gff_rep_tx_all_features
+    - id: data_manager_fetch_gff
+      params:
+        - 'file_type': 'full'
+        - 'dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.gff_selected_tx_all_features }}'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': '{{ item.build_id }}_gff_selected_tx_all_features'
+      items: "{{ genomes }}"
+      data_table_reload:
+        - all_gff
+
+    ## Load tx2gene table
+    - id: data_manager_fetch_tx2gene
+      params:
+        - 'dbkey': '{{ item.genome_id }}'
+        - 'reference_source|reference_source_selector': 'url'
+        - 'reference_source|user_url': '{{ item.all_tx_tx2gene }}'
+        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_id': '{{ item.build_id }}_all_tx_tx2gene'
+      items: "{{ genomes }}"
+      data_table_reload:
+        - tx2gene
+
 
     # Build bowtie2 index using the genome fasta
     - id: toolshed.g2.bx.psu.edu/repos/devteam/data_manager_bowtie2_index_builder/bowtie2_index_builder_data_manager/2.3.0
@@ -28,4 +67,8 @@ data_managers:
         - bowtie2_indexes
         - tophat2_indexes
 
-
+    - id: rna_star_index_builder
+      params:
+        - 'all_fasta_source': '{{ item.build_id }}'
+        - 'name': '{{ item.name }}'
+        -  'GTFconditional|GTFselect': 'withoutGTF'
