--- a/genomes/data_managers_genome_based.yaml
+++ b/genomes/data_managers_genome_based.yaml
@@ -45,6 +45,7 @@ data_managers:
     - id: data_manager_fetch_tx2gene
       params:
         - 'dbkey': '{{ item.genome_id }}'
+        - 'file_type' : 'tx2gene'
         - 'reference_source|reference_source_selector': 'url'
         - 'reference_source|user_url': '{{ item.all_tx_tx2gene }}'
         - 'sequence_name': '{{ item.name }}'
