fix names in parameters

--- a/genomes/data_managers_genome_based.yaml
+++ b/genomes/data_managers_genome_based.yaml
@@ -22,7 +22,7 @@ data_managers:
         - 'dbkey': '{{ item.genome_id }}'
         - 'reference_source|reference_source_selector': 'url'
         - 'reference_source|user_url': '{{ item.gff_all_tx_all_features }}'
-        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_name': '{{ item.name }} - All transcripts - All features'
         - 'sequence_id': '{{ item.build_id }}_gff_all_tx_all_features'
       items: "{{ genomes }}"
       data_table_reload:
@@ -35,7 +35,7 @@ data_managers:
         - 'dbkey': '{{ item.genome_id }}'
         - 'reference_source|reference_source_selector': 'url'
         - 'reference_source|user_url': '{{ item.gff_selected_tx_all_features }}'
-        - 'sequence_name': '{{ item.name }}'
+        - 'sequence_name': '{{ item.name }} - Selected transcripts - All features'
         - 'sequence_id': '{{ item.build_id }}_gff_selected_tx_all_features'
       items: "{{ genomes }}"
       data_table_reload:
